# logng

./: README.md  pyproject.toml
.github/workflows/: pypi.yml  test.yml
src/logng/: __init__.py  logger.py  outputs.py  shared.py
src/logng/base/: __init__.py  intf.py  logtype.py
tests/: test.py
